--- a/src/index.html
+++ b/src/index.html
@@ -23,5 +23,15 @@
 
   <!-- Load the JavaScript API client and Sign-in library. -->
   <script src="https://apis.google.com/js/client:platform.js"></script>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-11810862-13"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-11810862-13');
+  </script>  
 </body>
 </html>
