--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-signin-client_id" content="782701285518-tu7gmkm95lp6au9u3nmvamjmm7809b3v.apps.googleusercontent.com">
   <meta name="google-signin-scope" content="https://www.googleapis.com/auth/analytics.readonly">
+  <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
   <style>
   </style>
 </head>
 <body>
   <!-- Font Awesome -->
-  <script src="https://use.fontawesome.com/38ce0a8e1c.js"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
   <!-- JWPlayer -->
   <!--
