--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
   <meta name="google-signin-client_id" content="782701285518-tu7gmkm95lp6au9u3nmvamjmm7809b3v.apps.googleusercontent.com">
   <meta name="google-signin-scope" content="https://www.googleapis.com/auth/analytics.readonly">
   <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+  <meta property="og:url"                content="http://marxforcats.com" />
+  <meta property="og:title"              content="Marx for Cats" />
+  <meta property="og:description"        content="A professor explains key concepts in Marx to cats." />
+  <meta property="og:image"              content="http://marxforcats.com/images/cats.jpg" />
   <style>
   </style>
 </head>
